--- a/misc/repoconv/github_ci_actions.yml
+++ b/misc/repoconv/github_ci_actions.yml
@@ -72,7 +72,7 @@ jobs:
     #  operates accordingly.
     #
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - uses: lukka/get-cmake@latest
     - uses: seanmiddleditch/gha-setup-ninja@master
 
@@ -162,8 +162,8 @@ jobs:
            )
         else ("${{ runner.os }}" STREQUAL "Windows")
            execute_process(
-             COMMAND cmake --build build --verbose --config Release --target all
-             COMMAND cmake --build build --verbose --config Release --target check
+             COMMAND cmake --build build -j 1 --verbose --config Release --target all
+             COMMAND cmake --build build -j 1 --verbose --config Release --target check
              RESULT_VARIABLE result
            )
         endif ("${{ runner.os }}" STREQUAL "Windows")
