--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -125,6 +125,8 @@ jobs:
             -D CMAKE_VERBOSE_DISTCHECK=ON
           RESULT_VARIABLE result
         )
+        # On platforms where we have it, make sure the files are in place with a sync
+        execute_process(COMMAND sync)
         endif()
         if (NOT result EQUAL 0)
           message(FATAL_ERROR "Bad exit status")
@@ -160,15 +162,23 @@ jobs:
         if ("${{ runner.os }}" STREQUAL "Windows")
            execute_process(
              COMMAND cmake --build build -j 1 --config Release --target ALL_BUILD
-             COMMAND cmake --build build -j 1 --config Release --target check
+             RESULT_VARIABLE result
+           )
+           execute_process(
+             COMMAND cmake --build build -j 1 --verbose --config Release --target PACKAGE
              RESULT_VARIABLE result
            )
         else ("${{ runner.os }}" STREQUAL "Windows")
            execute_process(
              COMMAND cmake --build build -j 1 --verbose --config Release --target all
-             COMMAND cmake --build build -j 1 --verbose --config Release --target check
              RESULT_VARIABLE result
            )
+           execute_process(
+             COMMAND cmake --build build -j 1 --verbose --config Release --target package
+             RESULT_VARIABLE result
+           )
+           # On platforms where we have it, make sure the files are in place with a sync
+           execute_process(COMMAND sync)
         endif ("${{ runner.os }}" STREQUAL "Windows")
         if (NOT result EQUAL 0)
           message(FATAL_ERROR "Bad exit status")
@@ -177,29 +187,24 @@ jobs:
     - name: Package
       shell: cmake -P {0}
       run: |
-        if ("${{ runner.os }}" STREQUAL "Windows")
-           execute_process(
-             COMMAND cmake --build build -j 1 --config Release --target PACKAGE
-             COMMAND cmake -E make_directory package
-             COMMAND dir
-             COMMAND move BRL-CAD* package/
-             RESULT_VARIABLE result
-           )
-        else ("${{ runner.os }}" STREQUAL "Windows")
-           execute_process(
-             COMMAND cmake --build build -j 1 --verbose --config Release --target package
-             COMMAND cmake -E make_directory package
-             COMMAND ls
-             COMMAND mv BRL-CAD* package/
-             RESULT_VARIABLE result
-           )
-        endif ("${{ runner.os }}" STREQUAL "Windows")
-        if (NOT result EQUAL 0)
-          message(FATAL_ERROR "Bad exit status")
-        endif()
+        # https://cmake.org/pipermail/cmake/2007-July/015471.html
+        file(MAKE_DIRECTORY "${{ github.workspace }}/package")
+        file(GLOB pkgs_zip "${{ github.workspace }}/build/BRL-CAD*zip")
+        file(GLOB pkgs_gz "${{ github.workspace }}/build/BRL-CAD*gz")
+        file(GLOB pkgs_exe "${{ github.workspace }}/build/BRL-CAD*exe")
+        set(pkgs ${pkgs_zip} ${pkgs_gz} ${pkgs_exe})
+        foreach(p ${pkgs})
+           get_filename_component(proot ${p} NAME)
+           file(RENAME "${p}" "${{ github.workspace }}/package/${proot}")
+           if (NOT EXISTS "${{ github.workspace }}/package/${proot}")
+              message(FATAL_ERROR "RENAME of ${p} FAILED!")
+           else (NOT EXISTS "${{ github.workspace }}/package/${proot}")
+              message("staged ${{ github.workspace }}/package/${proot}")
+           endif (NOT EXISTS "${{ github.workspace }}/package/${proot}")
+        endforeach(p ${pkgs})
 
     - uses: actions/upload-artifact@v2
       with:
-        name: BRL-CAD
+        name: BRL-CAD_${{ runner.os }}
         path: ${{ github.workspace }}/package/*
 
