--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -114,6 +114,8 @@ jobs:
             -D CMAKE_VERBOSE_DISTCHECK=ON
           RESULT_VARIABLE result
         )
+        # Try Write-VolumeCache for Windows
+        execute_process(COMMAND powershell Write-VolumeCache C)
         else()
         execute_process(
           COMMAND cmake
@@ -187,21 +189,24 @@ jobs:
     - name: Package
       shell: cmake -P {0}
       run: |
+        string(REPLACE "\\" "/" gw_path ${{ github.workspace }})
+        message("gw_path: ${gw_path}")
         # https://cmake.org/pipermail/cmake/2007-July/015471.html
-        file(MAKE_DIRECTORY "${{ github.workspace }}/package")
-        file(GLOB pkgs_zip "${{ github.workspace }}/build/BRL-CAD*zip")
-        file(GLOB pkgs_gz "${{ github.workspace }}/build/BRL-CAD*gz")
-        file(GLOB pkgs_exe "${{ github.workspace }}/build/BRL-CAD*exe")
+        file(MAKE_DIRECTORY "${gw_path}/package")
+        file(GLOB pkgs_zip "${gw_path}/build/BRL-CAD*zip")
+        file(GLOB pkgs_gz "${gw_path}/build/BRL-CAD*gz")
+        file(GLOB pkgs_exe "${gw_path}/build/BRL-CAD*exe")
         set(pkgs ${pkgs_zip} ${pkgs_gz} ${pkgs_exe})
-        foreach(p ${pkgs})
+        foreach(praw ${pkgs})
+           string(REPLACE "\\" "/" p ${praw})
            get_filename_component(proot ${p} NAME)
-           file(RENAME "${p}" "${{ github.workspace }}/package/${proot}")
-           if (NOT EXISTS "${{ github.workspace }}/package/${proot}")
+           file(RENAME "${p}" "${gw_path}/package/${proot}")
+           if (NOT EXISTS "${gw_path}/package/${proot}")
               message(FATAL_ERROR "RENAME of ${p} FAILED!")
-           else (NOT EXISTS "${{ github.workspace }}/package/${proot}")
-              message("staged ${{ github.workspace }}/package/${proot}")
-           endif (NOT EXISTS "${{ github.workspace }}/package/${proot}")
-        endforeach(p ${pkgs})
+           else (NOT EXISTS "${gw_path}/package/${proot}")
+              message("staged ${gw_path}/package/${proot}")
+           endif (NOT EXISTS "${gw_path}/package/${proot}")
+        endforeach()
 
     - uses: actions/upload-artifact@v2
       with:
