latest - disable gdal and step related components for speed.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1384,6 +1384,10 @@ mark_as_advanced(BRLCAD_ENABLE_BULLET)
 option(BRLCAD_ENABLE_GDAL "Enable features requiring the Geospatial Data Abstraction Library" ON)
 mark_as_advanced(BRLCAD_ENABLE_GDAL)
 
+# Enable features requiring STEPcode library
+option(BRLCAD_ENABLE_STEP "Enable features requiring the STEP support libraries" ON)
+mark_as_advanced(BRLCAD_ENABLE_STEP)
+
 # Enable features requiring Qt
 option(BRLCAD_ENABLE_QT "Enable features requiring Qt" OFF)
 mark_as_advanced(BRLCAD_ENABLE_QT)
