--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -112,6 +112,8 @@ jobs:
             -D ENABLE_ALL=ON
             -D CMAKE_BUILD_TYPE=Release
             -D CMAKE_VERBOSE_DISTCHECK=ON
+            -D BRLCAD_ENABLE_GDAL=OFF
+            -D BRLCAD_ENABLE_STEP=OFF
           RESULT_VARIABLE result
         )
         # Try Write-VolumeCache for Windows
@@ -125,6 +127,8 @@ jobs:
             -D ENABLE_ALL=ON
             -D CMAKE_BUILD_TYPE=Release
             -D CMAKE_VERBOSE_DISTCHECK=ON
+            -D BRLCAD_ENABLE_GDAL=OFF
+            -D BRLCAD_ENABLE_STEP=OFF
           RESULT_VARIABLE result
         )
         # On platforms where we have it, make sure the files are in place with a sync
@@ -164,18 +168,14 @@ jobs:
         if ("${{ runner.os }}" STREQUAL "Windows")
            execute_process(
              COMMAND cmake --build build -j 1 --config Release --target ALL_BUILD
-             RESULT_VARIABLE result
-           )
-           execute_process(
+             COMMAND cmake --build build -j 1 --config Release --target check
              COMMAND cmake --build build -j 1 --verbose --config Release --target PACKAGE
              RESULT_VARIABLE result
            )
         else ("${{ runner.os }}" STREQUAL "Windows")
            execute_process(
              COMMAND cmake --build build -j 1 --verbose --config Release --target all
-             RESULT_VARIABLE result
-           )
-           execute_process(
+             COMMAND cmake --build build -j 1 --verbose --config Release --target check
              COMMAND cmake --build build -j 1 --verbose --config Release --target package
              RESULT_VARIABLE result
            )
