--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -82,6 +82,14 @@ jobs:
     - name: Configure
       shell: cmake -P {0}
       run: |
+        if ("${{ runner.os }}" STREQUAL "Windows")
+          # Try Write-VolumeCache for Windows
+          execute_process(COMMAND powershell Write-VolumeCache C)
+          execute_process(COMMAND powershell Write-VolumeCache D)
+        else ()
+          # On platforms where we have it, make sure the files are in place with a sync
+          execute_process(COMMAND sync)
+        endif ()
         set(ENV{CC} ${{ matrix.config.cc }})
         set(ENV{CXX} ${{ matrix.config.cxx }})
 
@@ -116,6 +124,7 @@ jobs:
         )
         # Try Write-VolumeCache for Windows
         execute_process(COMMAND powershell Write-VolumeCache C)
+        execute_process(COMMAND powershell Write-VolumeCache D)
         else()
         execute_process(
           COMMAND cmake
@@ -168,6 +177,9 @@ jobs:
              COMMAND cmake --build build -j 1 --verbose --config Release --target PACKAGE
              RESULT_VARIABLE result
            )
+           # Try Write-VolumeCache for Windows
+           execute_process(COMMAND powershell Write-VolumeCache C)
+           execute_process(COMMAND powershell Write-VolumeCache D)
         else ("${{ runner.os }}" STREQUAL "Windows")
            execute_process(
              COMMAND cmake --build build -j 1 --verbose --config Release --target all
