More minimal build

--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -120,7 +120,11 @@ jobs:
             -D ENABLE_ALL=ON
             -D CMAKE_BUILD_TYPE=Release
             -D CMAKE_VERBOSE_DISTCHECK=ON
-          RESULT_VARIABLE result
+            -D BRLCAD_ENABLE_GDAL=OFF
+            -D BRLCAD_ENABLE_STEP=OFF
+            -D BRLCAD_EXTRADOCS=OFF
+            -D BUILD_STATIC_LIBS=OFF
+           RESULT_VARIABLE result
         )
         # Try Write-VolumeCache for Windows
         execute_process(COMMAND powershell Write-VolumeCache C)
@@ -134,6 +138,10 @@ jobs:
             -D ENABLE_ALL=ON
             -D CMAKE_BUILD_TYPE=Release
             -D CMAKE_VERBOSE_DISTCHECK=ON
+            -D BRLCAD_ENABLE_GDAL=OFF
+            -D BRLCAD_ENABLE_STEP=OFF
+            -D BRLCAD_EXTRADOCS=OFF
+            -D BUILD_STATIC_LIBS=OFF
           RESULT_VARIABLE result
         )
         # On platforms where we have it, make sure the files are in place with a sync
