--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -191,7 +191,7 @@ jobs:
              if (NOT ${result})
                execute_process(COMMAND powershell Write-VolumeCache C)
                execute_process(COMMAND powershell Write-VolumeCache D)
-               execute_process(COMMAND cmake --build build --verbose --config Release --target PACKAGE RESULT_VARIABLE result)
+               execute_process(COMMAND cmake --build build --config Release --target PACKAGE RESULT_VARIABLE result)
              endif()
              math(EXPR BCNT "${BCNT}+1")
            endwhile()
@@ -208,7 +208,7 @@ jobs:
              endif()
              if (NOT ${result})
                execute_process(COMMAND sync)
-               execute_process(COMMAND cmake --build build --verbose --config Release --target package RESULT_VARIABLE result)
+               execute_process(COMMAND cmake --build build --config Release --target package RESULT_VARIABLE result)
              endif()
              math(EXPR BCNT "${BCNT}+1")
            endwhile()
