--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -169,7 +169,7 @@ jobs:
            set(BCNT 0)
            set(result 1)
            while(result AND ${BCNT} LESS 4)
-             execute_process(COMMAND cmake --build build --config Release --target ALL_BUILD RESULT_VARIABLE result)
+             execute_process(COMMAND cmake --build build --config Release --target all RESULT_VARIABLE result)
              if (NOT ${result})
                execute_process(COMMAND powershell Write-VolumeCache C)
                execute_process(COMMAND powershell Write-VolumeCache D)
@@ -178,7 +178,7 @@ jobs:
              if (NOT ${result})
                execute_process(COMMAND powershell Write-VolumeCache C)
                execute_process(COMMAND powershell Write-VolumeCache D)
-               execute_process(COMMAND cmake --build build --config Release --target PACKAGE RESULT_VARIABLE result)
+               execute_process(COMMAND cmake --build build --config Release --target package RESULT_VARIABLE result)
              endif()
              math(EXPR BCNT "${BCNT}+1")
            endwhile()
