--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -188,7 +188,7 @@ jobs:
            set(BCNT 0)
            set(result 1)
            while(result AND ${BCNT} LESS 4)
-             execute_process(COMMAND cmake --build build --config Release --target all RESULT_VARIABLE result)
+             execute_process(COMMAND cmake --build build --config Release --target libbg RESULT_VARIABLE result)
              if (NOT ${result})
                execute_process(COMMAND sync)
                execute_process(COMMAND cmake --build build --config Release --target check RESULT_VARIABLE result)
