Try to see what the environment script is outputting.

--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -98,6 +98,8 @@ jobs:
           COMMAND "${{ matrix.config.environment_script }}" && set
           OUTPUT_FILE environment_script_output.txt
           )
+          file(READ environment_script_output.txt ESOUT)
+          message("ESOUT: ${ESOUT}")
           file(STRINGS environment_script_output.txt output_lines)
           foreach(line IN LISTS output_lines)
             if (line MATCHES "^([a-zA-Z0-9_-]+)=(.*)$")
