--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -171,16 +171,16 @@ jobs:
            set(BCNT 0)
            set(result 1)
            while(result AND ${BCNT} LESS 4)
-             execute_process(COMMAND cmake --build build --config Release --target all RESULT_VARIABLE result)
+             execute_process(COMMAND cmake --build build -j 1 --config Release --target all RESULT_VARIABLE result)
              if (NOT ${result})
                execute_process(COMMAND powershell Write-VolumeCache C)
                execute_process(COMMAND powershell Write-VolumeCache D)
-               execute_process(COMMAND cmake --build build --config Release --target check RESULT_VARIABLE result)
+               execute_process(COMMAND cmake --build build -j 1 --config Release --target check RESULT_VARIABLE result)
              endif()
              if (NOT ${result})
                execute_process(COMMAND powershell Write-VolumeCache C)
                execute_process(COMMAND powershell Write-VolumeCache D)
-               execute_process(COMMAND cmake --build build --config Release --target package RESULT_VARIABLE result)
+               execute_process(COMMAND cmake --build build -j 1 --config Release --target package RESULT_VARIABLE result)
              endif()
              math(EXPR BCNT "${BCNT}+1")
            endwhile()
