Looks like rpath pieces aren't working on OSX...

--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -190,7 +190,8 @@ jobs:
            set(BCNT 0)
            set(result 1)
            while(result AND ${BCNT} LESS 4)
-             execute_process(COMMAND ls build/extinstall/regex/lib)
+             execute_process(COMMAND otool -l build/bin/asc2g)
+             execute_process(COMMAND otool -l build/lib/libitcl3.4.dylib)
              execute_process(COMMAND cmake --build build --config Release --target all RESULT_VARIABLE result)
              if (NOT ${result})
                execute_process(COMMAND sync)
