--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -45,22 +45,22 @@ jobs:
       fail-fast: true
       matrix:
         config:
+        - {
+            name: "Windows Latest MSVC", artifact: "Windows-MSVC.tar.xz",
+            os: windows-latest,
+            cc: "cl", cxx: "cl",
+            environment_script: "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Auxiliary/Build/vcvars64.bat"
+          }
        #- {
-       #    name: "Windows Latest MSVC", artifact: "Windows-MSVC.tar.xz",
-       #    os: windows-latest,
-       #    cc: "cl", cxx: "cl",
-       #    environment_script: "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Auxiliary/Build/vcvars64.bat"
+       #    name: "Ubuntu Latest GCC", artifact: "Linux.tar.xz",
+       #    os: ubuntu-20.04,
+       #    cc: "gcc", cxx: "g++"
        #  }
-        - {
-            name: "Ubuntu Latest GCC", artifact: "Linux.tar.xz",
-            os: ubuntu-20.04,
-            cc: "gcc", cxx: "g++"
-          }
-        - {
-            name: "macOS Latest Clang", artifact: "macOS.tar.xz",
-            os: macos-latest,
-            cc: "clang", cxx: "clang++"
-          }
+       #- {
+       #    name: "macOS Latest Clang", artifact: "macOS.tar.xz",
+       #    os: macos-latest,
+       #    cc: "clang", cxx: "clang++"
+       #  }
 
     #
     #  For each platform, we need to checkout the git repository,
