--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -45,22 +45,22 @@ jobs:
       fail-fast: true
       matrix:
         config:
-       #- {
-       #    name: "Windows Latest MSVC", artifact: "Windows-MSVC.tar.xz",
-       #    os: windows-latest,
-       #    cc: "cl", cxx: "cl",
-       #    environment_script: "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Auxiliary/Build/vcvars64.bat"
-       #  }
+        - {
+            name: "Windows Latest MSVC", artifact: "Windows-MSVC.tar.xz",
+            os: windows-latest,
+            cc: "cl", cxx: "cl",
+            #environment_script: "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Auxiliary/Build/vcvars64.bat"
+          }
        #- {
        #    name: "Ubuntu Latest GCC", artifact: "Linux.tar.xz",
        #    os: ubuntu-20.04,
        #    cc: "gcc", cxx: "g++"
        #  }
-        - {
-            name: "macOS Latest Clang", artifact: "macOS.tar.xz",
-            os: macos-latest,
-            cc: "clang", cxx: "clang++"
-          }
+       #- {
+       #    name: "macOS Latest Clang", artifact: "macOS.tar.xz",
+       #    os: macos-latest,
+       #    cc: "clang", cxx: "clang++"
+       #  }
 
     #
     #  For each platform, we need to checkout the git repository,
@@ -93,19 +93,19 @@ jobs:
         set(ENV{CC} ${{ matrix.config.cc }})
         set(ENV{CXX} ${{ matrix.config.cxx }})
 
-          if ("${{ runner.os }}" STREQUAL "Windows" AND NOT "x${{ matrix.config.environment_script }}" STREQUAL "x")
-          execute_process(
-          COMMAND "${{ matrix.config.environment_script }}" && set
-          OUTPUT_FILE environment_script_output.txt
-          )
-          file(READ environment_script_output.txt ESOUT)
-          message("ESOUT: ${ESOUT}")
-          file(STRINGS environment_script_output.txt output_lines)
-          foreach(line IN LISTS output_lines)
-            if (line MATCHES "^([a-zA-Z0-9_-]+)=(.*)$")
-              set(ENV{${CMAKE_MATCH_1}} "${CMAKE_MATCH_2}")
-            endif()
-          endforeach()
+         #if ("${{ runner.os }}" STREQUAL "Windows" AND NOT "x${{ matrix.config.environment_script }}" STREQUAL "x")
+         #execute_process(
+         #COMMAND "${{ matrix.config.environment_script }}" && set
+         #OUTPUT_FILE environment_script_output.txt
+         #)
+         #file(READ environment_script_output.txt ESOUT)
+         #message("ESOUT: ${ESOUT}")
+         #file(STRINGS environment_script_output.txt output_lines)
+         #foreach(line IN LISTS output_lines)
+         #  if (line MATCHES "^([a-zA-Z0-9_-]+)=(.*)$")
+         #    set(ENV{${CMAKE_MATCH_1}} "${CMAKE_MATCH_2}")
+         #  endif()
+         #endforeach()
         endif()
 
         set(path_separator ":")
@@ -128,7 +128,8 @@ jobs:
             -D BUILD_STATIC_LIBS=OFF
            RESULT_VARIABLE result
         )
-        if ("${{ runner.os }}" STREQUAL "Windows" AND NOT "x${{ matrix.config.environment_script }}" STREQUAL "x")
+        #if ("${{ runner.os }}" STREQUAL "Windows" AND NOT "x${{ matrix.config.environment_script }}" STREQUAL "x")
+        if ("${{ runner.os }}" STREQUAL "Windows")
           # Try Write-VolumeCache for Windows
           execute_process(COMMAND powershell Write-VolumeCache C)
           execute_process(COMMAND powershell Write-VolumeCache D)
