--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -169,6 +169,7 @@ jobs:
            set(BCNT 0)
            set(result 1)
            while(result AND ${BCNT} LESS 4)
+             execute_process(COMMAND SET)
              execute_process(COMMAND cmake --build build --config Release --target all RESULT_VARIABLE result)
              if (NOT ${result})
                execute_process(COMMAND powershell Write-VolumeCache C)
