--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -101,6 +101,7 @@ jobs:
           file(STRINGS environment_script_output.txt output_lines)
           foreach(line IN LISTS output_lines)
             if (line MATCHES "^([a-zA-Z0-9_-]+)=(.*)$")
+              message("${CMAKE_MATCH_1}: ${CMAKE_MATCH_2}")
               set(ENV{${CMAKE_MATCH_1}} "${CMAKE_MATCH_2}")
             endif()
           endforeach()
