Try alternate iteration

--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -99,13 +99,15 @@ jobs:
           OUTPUT_FILE environment_script_output.txt
           )
           file(STRINGS environment_script_output.txt output_lines)
-          foreach(line IN LISTS output_lines)
-            message("LINE: ${line}")
-            if (line MATCHES "^([a-zA-Z0-9_-]+)=(.*)$")
-              message("${CMAKE_MATCH_1}: ${CMAKE_MATCH_2}")
-              set(ENV{${CMAKE_MATCH_1}} "${CMAKE_MATCH_2}")
-            endif()
-          endforeach()
+          foreach(linec ${output_lines})
+            foreach(line ${linec})
+              message("LINE: ${line}")
+              if (line MATCHES "^([a-zA-Z0-9_-]+)=(.*)$")
+                message("${CMAKE_MATCH_1}: ${CMAKE_MATCH_2}")
+                set(ENV{${CMAKE_MATCH_1}} "${CMAKE_MATCH_2}")
+              endif()
+            endforeach(line ${linec})
+          endforeach(linec ${output_lines})
         endif()
 
         set(path_separator ":")
