--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -98,17 +98,20 @@ jobs:
           COMMAND "${{ matrix.config.environment_script }}" && set
           OUTPUT_FILE environment_script_output.txt
           )
+          file(READ environment_script_output.txt file_full)
+          message("file: ${file_full}")
+          string(REPLACE ";" "\n" NLINES "${file_full}")
+          file(WRITE environment_script_output.txt "${NLINES}")
+          file(READ environment_script_output.txt file_full)
+          message("file edited: ${file_full}")
           file(STRINGS environment_script_output.txt output_lines)
-          foreach(linec ${output_lines})
-            foreach(line ${linec})
-              message("LINE: ${line}")
-              if (line MATCHES "^([a-zA-Z0-9_-]+)=(.*)$")
-                message("${CMAKE_MATCH_1}: ${CMAKE_MATCH_2}")
-                set(ENV{${CMAKE_MATCH_1}} "${CMAKE_MATCH_2}")
-              endif()
-            endforeach(line ${linec})
-          endforeach(linec ${output_lines})
-        endif()
+          foreach(line IN LISTS output_lines)
+            message("LINE: ${line}")
+            if (line MATCHES "^([a-zA-Z0-9_-]+)=(.*)$")
+              message("${CMAKE_MATCH_1}: ${CMAKE_MATCH_2}")
+              set(ENV{${CMAKE_MATCH_1}} "${CMAKE_MATCH_2}")
+            endif()
+          endforeach()
 
         set(path_separator ":")
         if ("${{ runner.os }}" STREQUAL "Windows")
