--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -93,7 +93,7 @@ jobs:
         set(ENV{CC} ${{ matrix.config.cc }})
         set(ENV{CXX} ${{ matrix.config.cxx }})
 
-          if ("${{ runner.os }}" STREQUAL "Windows" AND NOT "x${{ matrix.config.environment_script }}" STREQUAL "x")
+        if ("${{ runner.os }}" STREQUAL "Windows" AND NOT "x${{ matrix.config.environment_script }}" STREQUAL "x")
           execute_process(
           COMMAND "${{ matrix.config.environment_script }}" && set
           OUTPUT_FILE environment_script_output.txt
@@ -112,6 +112,7 @@ jobs:
               set(ENV{${CMAKE_MATCH_1}} "${CMAKE_MATCH_2}")
             endif()
           endforeach()
+        endif()
 
         set(path_separator ":")
         if ("${{ runner.os }}" STREQUAL "Windows")
