--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -106,13 +106,18 @@ jobs:
           file(READ environment_script_output.txt file_full)
           message("file edited: ${file_full}")
           file(STRINGS environment_script_output.txt output_lines)
+          file(WRITE win_exec.cmake "# Generated file to set Visual Studio environment vars and run programs")
           foreach(line IN LISTS output_lines)
             message("LINE: ${line}")
             if (line MATCHES "^([a-zA-Z0-9_-]+)=(.*)$")
               message("${CMAKE_MATCH_1}: ${CMAKE_MATCH_2}")
               set(ENV{${CMAKE_MATCH_1}} "${CMAKE_MATCH_2}")
+              file(APPEND win_exec.cmake "set(ENV{${CMAKE_MATCH_1}} \"${CMAKE_MATCH_2}\")\n")
             endif()
           endforeach()
+          file(APPEND win_exec.cmake "execute_process(COMMAND ${CMD})\n")
+          file(READ win_exec.cmake wexec)
+          message("win_exec.cmake:\n${wexec}")
         endif()
 
         set(path_separator ":")
