--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -25,14 +25,17 @@ jobs:
       - name: Add msbuild to PATH
         uses: microsoft/setup-msbuild@v1.0.2
 
+      - name: Add cl.exe to PATH
+        uses: ilammy/msvc-dev-cmd@v1
+
       - name: Configure
         run: |
-          cmake -S . -B build -D ENABLE_ALL=ON -D CMAKE_BUILD_TYPE=Release
+          cmake -S . -B build -G Ninja -D CMAKE_C_COMPILER="cl.exe" -D CMAKE_CXX_COMPILER="cl.exe" -D ENABLE_ALL=ON -D CMAKE_BUILD_TYPE=Release
           powershell Write-VolumeCache C
           powershell Write-VolumeCache D
 
       - name: Build
-        run: cmake --build build --config Release --target ALL_BUILD
+        run: cmake --build build --config Release --target all
 
   linux:
     name: Ubuntu Latest GCC
