--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -34,13 +34,14 @@ jobs:
 
       - name: Configure
         run: |
-          cmake -S . -B build -D CMAKE_C_COMPILER="cl.exe" -D CMAKE_CXX_COMPILER="cl.exe" -D ENABLE_ALL=ON -D CMAKE_BUILD_TYPE=Release
+          #cmake -S . -B build -D CMAKE_C_COMPILER="cl.exe" -D CMAKE_CXX_COMPILER="cl.exe" -D ENABLE_ALL=ON -D CMAKE_BUILD_TYPE=Release
+          cmake -S . -B build -G Ninja -D CMAKE_C_COMPILER="cl.exe" -D CMAKE_CXX_COMPILER="cl.exe" -D ENABLE_ALL=ON -D CMAKE_BUILD_TYPE=Release
           powershell Write-VolumeCache C
           powershell Write-VolumeCache D
 
       - name: Build
-        run: cmake --build build --config Release --target package
-        #run: ninja -j1 --verbose
+        #run: cmake --build build --config Release --target package
+        run: ninja -j1 --verbose
 
       - name: Upload Package
         uses: actions/upload-artifact@v2
