--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -41,8 +41,8 @@ jobs:
 
       - name: Build
         #run: cd build && ninja -j1 -v STEPCODE_BLD && cd src/other/ext/STEPCODE_BLD-prefix/src/STEPCODE_BLD-build && ninja clean && ninja -j1 -v
-        #run: cmake --build build --config Release --target package
-        run: msbuild BRLCAD.proj -t:STEPCODE_BLD -v:diag
+        run: dir /s && cmake --build build --config Release --target package
+        #run: msbuild BRLCAD.proj -t:STEPCODE_BLD -v:diag
 
 #     - name: Upload Package
 #       uses: actions/upload-artifact@v2
