--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Build
         #run: cd build && ninja -j1 -v STEPCODE_BLD && cd src/other/ext/STEPCODE_BLD-prefix/src/STEPCODE_BLD-build && ninja clean && ninja -j1 -v
-        run: dir . /s
+        run: cd src/other/ext/STEPCODE_BLD-prefix/src/STEPCODE_BLD-build && msbuild ALL-BUILD.vcxproj -v:diag
         # && cmake --build build --config Release --target package
         #run: msbuild BRLCAD.proj -t:STEPCODE_BLD -v:diag
 
