--- a/src/other/ext/stepcode/CMakeLists.txt
+++ b/src/other/ext/stepcode/CMakeLists.txt
@@ -106,14 +106,14 @@ add_compile_options(
   )
 
 add_definitions(
-  WIN32
-  _WINDOWS
-  __WIN32__
-  _CRT_SECURE_NO_WARNINGS
-  _CRT_NONSTDC_NO_WARNINGS
-  _WINDLL
-  _MBCS
-  HAVE_DECL_FSEEKO
+  -DWIN32
+  -D_WINDOWS
+  -D__WIN32__
+  -D_CRT_SECURE_NO_WARNINGS
+  -D_CRT_NONSTDC_NO_WARNINGS
+  -D_WINDLL
+  -D_MBCS
+  -DHAVE_DECL_FSEEKO
   )
 
 
